# go2_ros2_sdk

./: .dockerignore  .gitmodules  README.md  build_workspace.sh  requirements.txt
.devcontainer/: devcontainer.json  install.sh
dev_env/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  setup_workspace.sh
dev_env/scripts/: test_foxglove_ws.py
go2_robot_sdk/config/: nav2_params.yaml  twist_mux.yaml
go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
go2_robot_sdk/launch/: mapping.launch.py  navigation.launch.py  robot.launch.py  webrtc_web.launch.py
lidar_processor/: setup.py
lidar_processor/lidar_processor/: __init__.py  lidar_to_pointcloud_node.py  pointcloud_test_node.py
src/go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
src/go2_robot_sdk/launch/: robot.launch.py
src/go2_robot_sdk/scripts/: send_nav2_goal.py
src/unitree_api/msg/: Response.msg
src/unitree_go/: package.xml
src/utils/: deserialize_map.py  nav2_goal.py  start_at_dock.py
unitree_api/: CMakeLists.txt  package.xml
unitree_api/msg/: Request.msg
unitree_go/: CMakeLists.txt
unitree_go/msg/: ConfigChangeStatus.msg
utils/: README.md  save_map.py  serialize_map.py
